[bdist_wheel]
universal = 1

[metadata]
project = CivPy
name = civpy
version = 0.0.1
author = Matt Pewsey
copyright = 2019, Matt Pewsey
description = Civil engineering design tools and algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/mpewsey/civpy
keywords =
  civil-engineering
  engineering
classifiers =
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Operating System :: OS Independent
  License :: OSI Approved :: BSD License

[options]
packages = find:
include_package_data = True
install_requires =
  numpy>=1.14.5
  scipy>=1.1.0
  matplotlib>=2.2.2
  propy>=1.0.0
  pandas>=0.23.0
  xsect>=1.1.0
python_requires = >=3.5

[options.extras_require]
test =
  pytest>=3.5.1
  pytest-cov>=2.5.1
  codecov>=2.0.15
docs =
  docutils==0.14
  numpydoc>=0.8.0
